--- a/test.html
+++ b/test.html
@@ -16,8 +16,22 @@
 <body>
     <main class="container">
 
+        <img class="Img" src="/images/jack.jpg">
+        <div>
+            <h2>Jack</h2>
+        </div>
+        <div>
+            <h2>Siemers</h2>
+        </div>
+        <div>
+            <h2>1. Lehrjahr</h2>
+        </div>
+        <div>
+            <h2>Informatiker Applikationsentwickler</h2>
+        </div>
+
+
     </main>
 
 
-    <script src="js/index.js"></script>
 </body>
